src/objects/echosign_dev1__SIGN_Object_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Display_Label__c</fullName>
        <label>Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Fully_Qualified_API__c</fullName>
        <label>Fully Qualified API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__SIGN_Data_Mapping__c</fullName>
        <label>Adobe Sign Data Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Data_Mapping__c</referenceTo>
        <relationshipLabel>Adobe Sign Object Mappings</relationshipLabel>
        <relationshipName>Object_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Object Mapping</label>
    <nameField>
        <label>Object API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>